End of section 3

--- a/BlazorBattles/Client/Shared/TopMenu.razor
+++ b/BlazorBattles/Client/Shared/TopMenu.razor
@@ -1,4 +1,7 @@
 ﻿<div class="top-menu">
     <img src="/icons/banana.png" />
-    @Bananas
+    <span class="popover-header">
+        @BananaService.Bananas
+    </span>
+    <AddBananas />
 </div>
