--- a/BlazorBattles/Client/_Imports.razor
+++ b/BlazorBattles/Client/_Imports.razor
@@ -11,4 +11,4 @@
 @using BlazorBattles.Client.Services
 @using Blazored.Toast
 @using Blazored.Toast.Services
-@using BlazorBattles.Shared.Models
+@using BlazorBattles.Shared.Entities
