--- a/BlazorBattles/Client/Pages/Index.razor
+++ b/BlazorBattles/Client/Pages/Index.razor
@@ -1,4 +1,13 @@
 ﻿@page "/"
 
-<h1>Welcome to Blazor Battles!</h1>
+<AuthorizeView>
+    <Authorized>
+        <h1>Welcome, @context.User.Identity.Name</h1>
+    </Authorized>
+    <NotAuthorized>
+        <h1>Hi, please login</h1>
+        <Login></Login>
+    </NotAuthorized>
+</AuthorizeView>
+
 
