--- a/BlazorBattles/Client/Shared/NavMenu.razor
+++ b/BlazorBattles/Client/Shared/NavMenu.razor
@@ -1,5 +1,8 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Blazor Battles</a>
+    <a class="navbar-brand" href="">
+        <img src="/icons/axe.png" />
+        Blazor Battles
+    </a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,17 +16,22 @@
             </NavLink>
         </li>
 
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="build">
-                <span class="oi oi-wrench" aria-hidden="true"></span> Build
-            </NavLink>
-        </li>
+        <AuthorizeView>
+            <Authorized>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="build">
+                        <span class="oi oi-wrench" aria-hidden="true"></span> Build
+                    </NavLink>
+                </li>
 
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="army">
-                <span class="oi oi-people" aria-hidden="true"></span> My Army
-            </NavLink>
-        </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="army">
+                        <span class="oi oi-people" aria-hidden="true"></span> My Army
+                    </NavLink>
+                </li>
+            </Authorized>
+        </AuthorizeView>
+        
     </ul>
 </div>
 
