--- a/BlazorBattles/Client/Shared/TopMenu.razor
+++ b/BlazorBattles/Client/Shared/TopMenu.razor
@@ -1,7 +1,21 @@
-﻿<div class="top-menu">
-    <img src="/icons/banana.png" />
-    <span class="popover-header">
-        @BananaService.Bananas
-    </span>
-    <AddBananas />
-</div>
+﻿<AuthorizeView>
+    <Authorized>
+        <div class="top-menu">
+            <img src="/icons/banana.png" />
+            <span class="popover-header">
+                @BananaService.Bananas
+            </span>
+            <AddBananas />
+        </div>
+        <div>
+            <NavLink @onclick="Logout" href="javascript:void(0);">Log out</NavLink>
+        </div>
+    </Authorized>
+
+    <NotAuthorized>
+        <div>
+            <NavLink href="/">Login</NavLink> |
+            <NavLink href="/register">Register</NavLink>
+        </div>
+    </NotAuthorized>
+</AuthorizeView>
