--- a/BlazorBattles/Client/_Imports.razor
+++ b/BlazorBattles/Client/_Imports.razor
@@ -4,6 +4,8 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorBattles.Client
@@ -12,3 +14,4 @@
 @using Blazored.Toast
 @using Blazored.Toast.Services
 @using BlazorBattles.Shared.Entities
+@using BlazorBattles.Shared.Models
