--- a/BlazorBattles/Client/_Imports.razor
+++ b/BlazorBattles/Client/_Imports.razor
@@ -13,5 +13,4 @@
 @using BlazorBattles.Client.Services
 @using Blazored.Toast
 @using Blazored.Toast.Services
-@using BlazorBattles.Shared.Entities
-@using BlazorBattles.Shared.Models
+@using BlazorBattles.Shared.DTOs
