--- a/BlazorBattles/Client/App.razor
+++ b/BlazorBattles/Client/App.razor
@@ -1,11 +1,14 @@
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
         <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-                <NotAuthorized>
-                    <Login></Login>
-                </NotAuthorized>
-            </AuthorizeRouteView>
+            @if (UnitService.Units != null)
+            {
+                <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                    <NotAuthorized>
+                        <Login></Login>
+                    </NotAuthorized>
+                </AuthorizeRouteView>
+            }
         </Found>
         <NotFound>
             <LayoutView Layout="@typeof(MainLayout)">
