--- a/BlazorBattles/Client/Pages/Authentications/Register.razor
+++ b/BlazorBattles/Client/Pages/Authentications/Register.razor
@@ -1,5 +1,7 @@
 ﻿@page "/register"
 
+<PreventAuthorizedUserAccess />
+
 <h3>Register</h3>
 
 <EditForm Model="model" OnValidSubmit="HandleRegistration">
